--- a/burçlar.html
+++ b/burçlar.html
@@ -49,7 +49,7 @@
                 <input type="time"></input> 
                 <br>
                 
-                <input type="button" value="Formu Gönder" style="text-align: center;">
+                <input type="submit" value="Formu Gönder" style="text-align: center;">
         </form>
     </fieldset>
 </body>
